fixed overflow issue

--- a/assets2/css/styles-1.css
+++ b/assets2/css/styles-1.css
@@ -287,7 +287,7 @@ hr{
 .service-item .service-icon{
 	display: block;
 	margin:0 auto 0px;
-	width:180px;
+	
 	height:180px;
 	
 
