--- a/css/style.css
+++ b/css/style.css
@@ -731,7 +731,7 @@ footer p {
   }
   .hero .hero-img {
     
-    width: 75%;
+    width: 50%;
     margin: auto;
   }
   .aboutme {
